# philapi

./: .env-template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
db/init/: 01-schema.sql
docs/: schema.dbml
scripts/: sparql.py
